# jacques

./: .anjuta_sym_db.db  .gitignore  .gitmodules  AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac
.anjuta/session/: anjuta.session  dock-layout.xml
conf/: README  jacques.conf
mod/: Makefile  Makefile.am  Makefile.in  README  app.py  jacques.c  ptest.py  test.c
mods/: Makefile.am  Makefile.in  README  hello.c
po/: LINGUAS  POTFILES.in  zh_CN.po
src/: Makefile.am  Makefile.in  client.c  client.h  config.c  config.h  config.h.in  debug.h  dl.c  dl.h  hook.c  hook.h  i18n.h  list.c  list.h  main.c  master.c  master.h  mod.c  mod.h  module.c  module.h  net.c  net.h  package.c  package.h  server.c  server.h  signal.c  signal_.h  signals.c  signals.h  socket.c  socket.h  utils.c  utils.h
src/libjac/: Makefile  hook.h  libjac.h  mod.h  socket.c  socket.h
test/: Makefile  test-jac  test-jac.c  test-net  test-net.c
tests/: .gitignore  Makefile.am  Makefile.in  flood.py  test-jac.c
