dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.


AC_INIT(jacques, 0.01)
#AC_CONFIG_AUX_DIR([.])

AM_INIT_AUTOMAKE


AM_SILENT_RULES([yes])

AC_PROG_CC


#AC_CONFIG_SUBDIRS([src/libjac])

AC_OUTPUT([
           Makefile
           src/Makefile
           mod/Makefile
           ])
